--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb://127.0.0.1:27017/crud_express
+MONGODB_URI=mongodb+srv://aegaramadhan_db_user:aEinUKkAtews2pp1@portofolio.7wazcsa.mongodb.net/portfolio_db?appName=portofolio
 PORT=3000
